<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_refresh_my_trip">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:visibility="visible"
            android:id="@+id/rcv_my_trip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/rlt_user_not_sign_in"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_intro_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:gravity="center"
                android:text="@string/trip_intro_description"
                android:textColor="@color/colorBlack"/>


            <TextView
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:padding="@dimen/size_16"
                android:gravity="center"
                android:text="@string/trip_start"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_btn_green_dark"
                android:clickable="true"/>

        </LinearLayout>

    </FrameLayout>



</android.support.v4.widget.SwipeRefreshLayout>